<resources>
    <string name="app_name">ExamenCrudFactura2</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="factura">FACTURA</string>
    <string name="item">ITEM</string>
    <string name="qu_deseas_gestionar">¿Qué deseas gestionar?</string>
    <string name="regresar"><![CDATA[<- REGRESAR]]></string>
    <string name="gesti_n_de_factura">Gestión de Factura</string>
    <string name="crear_factura">CREAR FACTURA</string>
    <string name="leer_factura">LEER FACTURA</string>
    <string name="actualizar_factura">ACTUALIZAR FACTURA</string>
    <string name="borrar_factura">BORRAR FACTURA</string>
    <string name="salir">SALIR</string>
</resources>